--- a/index.html
+++ b/index.html
@@ -5,10 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   <link rel="stylesheet" href="https://getbootstrap.com/docs/4.6/getting-started/introduction/"> 
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" integrity="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="box">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="smallbox">
+                        <i class="fa fa-instagram fa-3x"></i>
+                        <h4>Instagram</h4>
+                        <div class="cont">
+                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
+                                rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
+                               yuutbgek djfnjklk </span>
+                        </div>
+                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="smallbox">
+                        <i class="fa fa-instagram fa-3x"></i>
+                        <h4>Instagram</h4>
+                        <div class="cont">
+                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
+                                 rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
+                                yuutbgek djfnjklk </span>
+                        </div>
+                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="smallbox">
+                        <i class="fa fa-instagram fa-3x"></i>
+                        <h4>Instagram</h4>
+                        <div class="cont">
+                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
+                                 rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
+                                yuutbgek djfnjklk </span>
+                        </div>
+                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="smallbox">
+                        <i class="fa fa-instagram fa-3x"></i>
+                        <h4>Instagram</h4>
+                        <div class="cont">
+                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
+                                 rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
+                                yuutbgek djfnjklk </span>
+                        </div>
+                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="smallbox">
+                        <i class="fa fa-instagram fa-3x"></i>
+                        <h4>Instagram</h4>
+                        <div class="cont">
+                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
+                                 rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
+                                yuutbgek djfnjklk </span>
+                        </div>
+                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="smallbox">
+                        <i class="fa fa-instagram fa-3x"></i>
+                        <h4>Instagram</h4>
+                        <div class="cont">
+                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
+                                 rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
+                                yuutbgek djfnjklk </span>
+                        </div>
+                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
