--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" integrity="">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous"
+        integrity="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="box">
         <div class="container">
@@ -18,20 +24,20 @@
                         <i class="fa fa-instagram fa-3x"></i>
                         <h4>Instagram</h4>
                         <div class="cont">
+                            <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Repellat perferendis consequatur odit soluta nemo facilis sit quia fugiat optio cupiditate.
+                                 Placeat laborum ea harum ipsa rerum sit alias atque sint.</span>
+                        </div>
+                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="smallbox">
+                        <i class="fa fa-twitter fa-3x"></i>
+                        <h4>Twitter</h4>
+                        <div class="cont">
                             <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
                                 rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
-                               yuutbgek djfnjklk </span>
-                        </div>
-                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="smallbox">
-                        <i class="fa fa-instagram fa-3x"></i>
-                        <h4>Instagram</h4>
-                        <div class="cont">
-                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
-                                 rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
                                 yuutbgek djfnjklk </span>
                         </div>
                         <a href="https://www.Instagram.com" target="_blank">learnmore</a>
@@ -39,54 +45,55 @@
                 </div>
                 <div class="col-md-4">
                     <div class="smallbox">
-                        <i class="fa fa-instagram fa-3x"></i>
-                        <h4>Instagram</h4>
+                        <i class="fa fa-facebook fa-3x"></i>
+                        <h4>Facebook</h4>
                         <div class="cont">
                             <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
-                                 rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
+                                rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
                                 yuutbgek djfnjklk </span>
                         </div>
-                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
+                        <a href="https://www.facebook.com" target="_blank">learnmore</a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="smallbox">
-                        <i class="fa fa-instagram fa-3x"></i>
-                        <h4>Instagram</h4>
+                        <i class="fa fa-pinterest-p fa-3x"></i>
+                        <h4>Pinterest</h4>
                         <div class="cont">
                             <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
-                                 rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
+                                rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
                                 yuutbgek djfnjklk </span>
                         </div>
-                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
+                        <a href="https://www.pinterest.com" target="_blank">learnmore</a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="smallbox">
-                        <i class="fa fa-instagram fa-3x"></i>
-                        <h4>Instagram</h4>
+                        <i class="fa fa-google-plus fa-3x"></i>
+                        <h4>Google</h4>
                         <div class="cont">
                             <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
-                                 rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
+                                rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
                                 yuutbgek djfnjklk </span>
                         </div>
-                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
+                        <a href="https://www.google-plus.com" target="_blank">learnmore</a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="smallbox">
-                        <i class="fa fa-instagram fa-3x"></i>
-                        <h4>Instagram</h4>
+                        <i class="fa fa-github fa-3x"></i>
+                        <h4>Github</h4>
                         <div class="cont">
                             <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
-                                 rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
+                                rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
                                 yuutbgek djfnjklk </span>
                         </div>
-                        <a href="https://www.Instagram.com" target="_blank">learnmore</a>
+                        <a href="https://www.github.com" target="_blank">learnmore</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
