--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <h4>Instagram</h4>
                         <div class="cont">
                             <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Repellat perferendis consequatur odit soluta nemo facilis sit quia fugiat optio cupiditate.
-                                 Placeat laborum ea harum ipsa rerum sit alias atque sint.</span>
+                                   Repellat perferendis consequatur odit soluta nemo facilis sit quia fugiat optio cupiditate.
+                                   Placeat laborum ea harum ipsa rerum sit alias atque sint.</span>
                         </div>
                         <a href="https://www.Instagram.com" target="_blank">learnmore</a>
                     </div>
@@ -36,9 +36,9 @@
                         <i class="fa fa-twitter fa-3x"></i>
                         <h4>Twitter</h4>
                         <div class="cont">
-                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
-                                rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
-                                yuutbgek djfnjklk </span>
+                            <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                   Repellat perferendis consequatur odit soluta nemo facilis sit quia fugiat optio cupiditate.
+                                   Placeat laborum ea harum ipsa rerum sit alias atque sint.</span>
                         </div>
                         <a href="https://www.Instagram.com" target="_blank">learnmore</a>
                     </div>
@@ -48,9 +48,9 @@
                         <i class="fa fa-facebook fa-3x"></i>
                         <h4>Facebook</h4>
                         <div class="cont">
-                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
-                                rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
-                                yuutbgek djfnjklk </span>
+                            <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                   Repellat perferendis consequatur odit soluta nemo facilis sit quia fugiat optio cupiditate.
+                                   Placeat laborum ea harum ipsa rerum sit alias atque sint.</span>
                         </div>
                         <a href="https://www.facebook.com" target="_blank">learnmore</a>
                     </div>
@@ -60,9 +60,9 @@
                         <i class="fa fa-pinterest-p fa-3x"></i>
                         <h4>Pinterest</h4>
                         <div class="cont">
-                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
-                                rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
-                                yuutbgek djfnjklk </span>
+                            <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                   Repellat perferendis consequatur odit soluta nemo facilis sit quia fugiat optio cupiditate.
+                                   Placeat laborum ea harum ipsa rerum sit alias atque sint.</span>
                         </div>
                         <a href="https://www.pinterest.com" target="_blank">learnmore</a>
                     </div>
@@ -72,9 +72,9 @@
                         <i class="fa fa-google-plus fa-3x"></i>
                         <h4>Google</h4>
                         <div class="cont">
-                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
-                                rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
-                                yuutbgek djfnjklk </span>
+                            <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                   Repellat perferendis consequatur odit soluta nemo facilis sit quia fugiat optio cupiditate.
+                                   Placeat laborum ea harum ipsa rerum sit alias atque sint.</span>
                         </div>
                         <a href="https://www.google-plus.com" target="_blank">learnmore</a>
                     </div>
@@ -84,9 +84,9 @@
                         <i class="fa fa-github fa-3x"></i>
                         <h4>Github</h4>
                         <div class="cont">
-                            <span> kjojjn jnjn jhruerhkjrniu uljbfe jfbhbgng.
-                                rgbgjhbi iybkjfvsdj gbdgjnf iugkjgb
-                                yuutbgek djfnjklk </span>
+                            <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                   Repellat perferendis consequatur odit soluta nemo facilis sit quia fugiat optio cupiditate.
+                                   Placeat laborum ea harum ipsa rerum sit alias atque sint.</span>
                         </div>
                         <a href="https://www.github.com" target="_blank">learnmore</a>
                     </div>
